2007-10-10 Kazuhiko
* add a read-only field of filename in File view and Image view.

2007-09-25 yo
* Set module group on portal types.

2007-09-12 yo
* Split Currency_asNumericCode into Base_convertCurrencyCodeToNumericCode.

2007-09-12 Yusei
* Removed module_view action from modules's type information. Now the action is provided by erp5_core as global action.

2007-09-11 yo
* New script, Currency_asNumericCode.

2007-09-05 Yusei
* Added proxy role(Manager) to Assignment_updateUserSecurityGroup(assignment_workflow)

2007-08-29 Yusei
* Added new view action for module.

2007-08-13 Jerome
* Remove portal type actions that are now defined as global actions

2007-02-12 Kevin
* Fix precision display in currency module  list.
* Increase version number.
* Update BT5 description.
* Update copyright.

2006-09-12 Romain
* Display translated state of Assignement.

2006-09-01 Romain
* Modify some field's titles.

2006-08-29 jerome
* add a field to change id on currencies, only enabled for manager (because changing a currency id may reindex many related objects)
* sort and cache in CurrencyModule_getCurrencyItemList

2006-08-28 Romain
* Remove gender's paths

2006-06-30 aurel
* add overdraft facility field on bank account

2006-06-27 Kevin
* Add symbol on Currencies.
* Use searchFolder on Organisation details view.

2006-06-09 Kevin
* Remove financial_year_stop_date field since Accounting Period Objects replace it.

2006-06-05 Kevin
* Add a dynamic warning message to the OOo Calc import tool to remind user to re-upload the file. This is a know limitation of the current implementation. A bug report has been written for this.
* Add OOo Calc Import action on Person Module.

2006-06-02 Kevin
* Move OpenOffice Importer tool from erp5_core to erp5_base.

2006-05-29 jerome
* Set acquisition on price_currency category

2006-05-15 jerome
* removed 'transactions' view from Bank Account ptype. It is part of erp5_accounting.

2006-05-15 Alex
* Update maintainers.

2006-05-03 aurel