@@ -3,11 +3,8 @@
   <record id="1" aka="AAAAAAAAAAE=">
     <pickle>
       <tuple>
-        <tuple>
-          <string>Products.DCWorkflow.DCWorkflow</string>
-          <string>DCWorkflowDefinition</string>
-        </tuple>
-        <none/>
+        <global name="DCWorkflowDefinition" module="Products.DCWorkflow.DCWorkflow"/>
+        <tuple/>
       </tuple>
     </pickle>
     <pickle>
@@ -70,7 +67,7 @@
         </item>
         <item>
             <key> <string>state_var</string> </key>
-            <value> <string>state</string> </value>
+            <value> <string>validation_state</string> </value>
         </item>
         <item>
             <key> <string>title</string> </key>
